tuidom-macros/tests/ui/edge_arity.stderr
error: edge spacing takes one to four cell counts: `1`, `1 2`, `1 2 3`, or `1 2 3 4`
 --> tests/ui/edge_arity.rs:5:18
  |
5 |         padding: 1 2 3 4 5,
  |                  ^^^^^^^^^
