tuidom-macros/tests/ui/edge_arity.rs
use tuidom_macros::style;

fn main() {
    let _ = style! {
        padding: 1 2 3 4 5,
    };
}
